--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -100,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:ems="10"
-            android:hint="เบอร์มือถือ"
+            android:hint="เบอร์โทรศัพท์"
             android:inputType="number"
             android:maxLength="10"
             android:textColor="@color/text_color"
