--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -111,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:ems="10"
-            android:hint="เลขบัตรประจำตัวชาชน"
+            android:hint="เลขบัตรประจำตัวประชาชน"
             android:inputType="number"
             android:maxLength="13"
             android:textColor="@color/text_color"
