--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="V. พ่อค้าแม่ค้า"
+                android:text="V. Merchant"
                 android:textColor="@color/text_color"
                 android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Username"
                 android:inputType="text"
-                android:text="jongtalad2017"
+                android:text="merchant1"
                 android:textColor="@color/text_color"
                 android:textColorHint="@color/text_color" />
 
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:text="12345678"
+                android:text="merchant1"
                 android:textColor="@color/text_color"
                 android:textColorHint="@color/text_color" />
 
@@ -78,13 +78,13 @@
                 android:id="@+id/btnLoginPage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ล็อกอิน" />
+                android:text="Login" />
 
             <Button
                 android:id="@+id/btnRegisterPage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="สมัครสมาชิก" />
+                android:text="Register" />
 
         </LinearLayout>
 
